--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
 [target.aarch64-apple-darwin]
 rustflags = ["--cfg=aes_armv8", "-Ctarget-cpu=native"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-Ctarget-cpu=native"]
