--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ digest = { version = "0.11.0-pre.10", features = ["mac"], git = "https://github.
 # block-buffer = "0.11.0-rc.4"
 # cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }
 subtle = "2"
+cfg-if = "1"
 
 [dev-dependencies]
 hex-literal = "1"
