--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ digest = { version = "0.11.0-pre.10", features = ["mac"], git = "https://github.
 subtle = "2"
 cfg-if = "1"
 
+aes = { version = "0.9.0-pre.3", features = ["hazmat"], git = "https://github.com/RustCrypto/block-ciphers" }
+
+[patch.crates-io]
+cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }
+
 [dev-dependencies]
 hex-literal = "1"
 aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/", features = ["alloc"] }
