--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/
 
 [dev-dependencies]
 hex-literal = "1"
-aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/", features = ["alloc"] }
+aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/", features = ["alloc", "os_rng"] }
 benchmark-simple = "0.1.10"
 aegis = "0.9"
 
