--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ digest = { version = "0.11.0-pre.10", features = [
 ], git = "https://github.com/RustCrypto/traits/" }
 # crypto-common = { version = "0.2.0-rc.2", git = "https://github.com/RustCrypto/traits/" }
 # block-buffer = "0.11.0-rc.4"
-# cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }
+cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }
 subtle = "2"
 cfg-if = "1"
 
