--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,5 +3,5 @@ rustflags = ["-Ctarget-cpu=native"]
 rustdocflags = ["-Ctarget-cpu=native"]
 
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-Ctarget-cpu=native", "-Ctarget-feature=+avx2,+avx512f"]
-rustdocflags = ["-Ctarget-cpu=native", "-Ctarget-feature=+avx2,+avx512f"]
+rustflags = ["-Ctarget-feature=+vaes,+avx512f"]
+rustdocflags = ["-Ctarget-feature=+vaes,+avx512f"]
